--- a/style.css
+++ b/style.css
@@ -1,5 +1,143 @@
-body{
-    margin: 0;
-    /* font-family: 'Signika Negative', sans-serif; */
-
+/* Common Styles or Utilities */
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+/* Start Banner Styles */
+.banner-wrapper {
+  display: flex;
+  background-color: #161616;
+  color: #fff;
+  margin-top: 50px;
+  border-radius: 30px;
+}
+.banner-title {
+  font-size: 70px;
+  font-weight: bold;
+}
+.single-col {
+  width: 100%;
+}
+.single-col:nth-child(1) {
+  padding: 0 0 80px 80px;
+}
+.single-col img {
+  width: 90%;
+}
+.single-col p {
+  margin-bottom: 40px;
+}
+.watch-live {
+  background-color: #ffe600;
+  color: #161616;
+  font-size: 16px;
+  font-weight: 700;
+  text-decoration: none;
+  padding: 15px;
+  border-radius: 5px;
+  transition: 0.5s;
+}
+.watch-live:hover {
+  background-color: #ad241f;
+  color: #fff;
+  transform: scale(1.3);
+}
+.watch-live span {
+  margin-left: 5px;
+}
+/* End Banner Styles */
+
+/* Start Blog Styles  */
+.blog-wrapper {
+  display: flex;
+  margin: 130px 0;
+}
+.blog-sidebar {
+  width: 25%;
+}
+.blog-card-wrapper {
+  width: 75%;
+}
+.blog-indicator {
+  display: flex;
+  flex-direction: column;
+  background-color: #161616;
+  margin: 15px 20px;
+  padding: 15px;
+  border-radius: 10px;
+}
+.blog-indicator button {
+  font-size: 18px;
+  font-weight: 500;
+  margin: 10px 20px;
+  padding: 10px;
+  border-radius: 10px;
+}
+.blog-card-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.blog-card {
+  margin: 15px;
+  border: 1px solid rgba(128, 128, 128, 0.2);
+  border-radius: 10px;
+}
+.blog-card .thumbnail img {
+  width: 100%;
+}
+.card-content {
+  padding: 15px;
+}
+.blog-card button {
+  background-color: #fff;
+  font-size: 16px;
+  margin-top: 10px;
+}
+.blog-card p {
+  font-size: 18px;
+  font-weight: 600;
+}
+.blog-card-info {
+  display: flex;
+  color: rgb(94, 94, 94);
+}
+.blog-comment {
+  margin-left: 25px;
+}
+/* End Blog Styles  */
+
+/* Start Footer Styles */
+footer {
+  background-color: #161616;
+  text-align: center;
+  padding: 50px;
+}
+footer hr {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+footer h1 {
+  color: #fff;
+}
+footer nav ul {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+footer nav ul li {
+  list-style: none;
+  margin: 10px 20px;
+}
+footer nav ul li a {
+  font-size: 16px;
+  color: #b9b9b9;
+  text-decoration: none;
+}
+footer nav ul li a:hover {
+  color: #fff;
+}
+/* End Footer Styles */
