--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 /* Common Styles or Utilities */
+* {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
 }
+
 .container {
   width: 90%;
   margin: 0 auto;
@@ -27,7 +31,7 @@ body {
   padding: 0 0 80px 80px;
 }
 .single-col img {
-  width: 90%;
+  width: 100%;
 }
 .single-col p {
   margin-bottom: 40px;
@@ -39,12 +43,14 @@ body {
   font-weight: 700;
   text-decoration: none;
   padding: 15px;
-  border-radius: 5px;
+  border: 1px solid #ffe600;
+  border-radius: 8px;
   transition: 0.5s;
 }
 .watch-live:hover {
   background-color: #ad241f;
   color: #fff;
+  border: 1px solid #ad241f;
   transform: scale(1.3);
 }
 .watch-live span {
@@ -71,13 +77,25 @@ body {
   padding: 15px;
   border-radius: 10px;
 }
-.blog-indicator button {
+.blog-indicator a {
+  background: white;
+  color: #161616;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 600;
+  text-decoration: none;
+  text-align: center;
   margin: 10px 20px;
   padding: 10px;
   border-radius: 10px;
 }
+.blog-indicator .active {
+  background-color: #ffe600;
+}
+.blog-indicator a:active {
+  background-color: #ad241f;
+  color: #fff;
+}
+
 .blog-card-wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -97,6 +115,9 @@ body {
   background-color: #fff;
   font-size: 16px;
   margin-top: 10px;
+  padding: 7px;
+  border: 1px solid black;
+  border-radius: 5px;
 }
 .blog-card p {
   font-size: 18px;
@@ -108,6 +129,16 @@ body {
 }
 .blog-comment {
   margin-left: 25px;
+}
+.view-all {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.view-all button {
+  display: none;
+  border: 1px solid #dfc903;
+
 }
 /* End Blog Styles  */
 
@@ -125,12 +156,13 @@ footer h1 {
 }
 footer nav ul {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-wrap: wrap;
+  padding-left: 0;
 }
 footer nav ul li {
   list-style: none;
-  margin: 10px 20px;
+  margin: 10px;
 }
 footer nav ul li a {
   font-size: 16px;
@@ -140,4 +172,143 @@ footer nav ul li a {
 footer nav ul li a:hover {
   color: #fff;
 }
+.social-icon i {
+  color: #b9b9b9;
+  font-size: 28px;
+  margin: 10px;
+  transition: 0.5s;
+}
+.social-icon i:hover {
+  color: #fff;
+  transform: rotate(360deg);
+}
 /* End Footer Styles */
+
+/* Start Upcoming Pages Styles */
+.upcoming-match-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+}
+.upcoming-match-card {
+  margin: 10px;
+  padding: 20px;
+  border: 1px solid rgb(82 82 82 / 10%);
+  border-radius: 5px;
+}
+.match-region {
+  display: flex;
+  align-items: center;
+}
+.flag img,
+.match-region p {
+  width: 100%;
+  font-weight: 700;
+}
+.upcoming-match-content p {
+  color: #4d4d4d;
+}
+
+/* End Upcoming Pages Styles */
+
+/* ---------------
+Responsive Styles 
+----------------- */
+
+/* Responsiveness on Mobile  */
+@media only screen and (max-width: 576px) {
+  /* Banner styles  */
+  .banner-wrapper {
+    flex-direction: column;
+    text-align: center;
+  }
+  .banner-title {
+    font-size: 30px;
+  }
+  .single-col:nth-child(1) {
+    padding: 0px;
+  }
+  .single-col p {
+    white-space: nowrap;
+    border: 15px solid transparent;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  /* Blog Section */
+  .blog-wrapper {
+    flex-direction: column;
+    margin: 0;
+  }
+  .blog-sidebar {
+    width: 100%;
+  }
+  .blog-indicator {
+    background-color: transparent;
+  }
+  .blog-indicator a {
+    border: 1px solid rgba(128, 128, 128, 0.5);
+  }
+  .blog-card-wrapper {
+    width: 100%;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  footer nav ul {
+    flex-direction: column;
+  }
+  /* Start Upcoming Pages Styles */
+  .upcoming-match-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+/* Responsiveness on Tablet  */
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+  /* Banner Styles  */
+  .banner-title {
+    font-size: 40px;
+  }
+  .single-col img {
+    position: relative;
+    width: 100%;
+    top: 20%;
+  }
+  /* Blog Section */
+  .blog-wrapper {
+    flex-direction: column;
+    margin: 0;
+  }
+  .blog-sidebar {
+    width: 100%;
+  }
+  .blog-indicator {
+    flex-direction: row;
+    align-items: center;
+  }
+  .blog-indicator a {
+    width: 150px;
+  }
+  .blog-card-wrapper {
+    width: 100%;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .blog-card:nth-child(7),
+  .blog-card:nth-child(8),
+  .blog-card:nth-child(9) {
+    display: none;
+  }
+  .view-all button {
+    display: block;
+  }
+  /* Start Upcoming Pages Styles */
+  .upcoming-match-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  .single-col img {
+    position: relative;
+    top: 20%;
+  }
+}
